--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 *.o
 *.py~
 workspace_dev/*
-workspace/*
+*.reapeaks
+.vscode/
 software/models_interface/output_sounds/*.wav
 software/transformations_interface/output_sounds/*.wav
 .ipynb_checkpoints/
